RESOLVED FIXED230818
[Curl] Set CURL_LOCK_DATA_SSL_SESSION option to reduce SSL/TLS handshake time
https://bugs.webkit.org/show_bug.cgi?id=230818
Summary [Curl] Set CURL_LOCK_DATA_SSL_SESSION option to reduce SSL/TLS handshake time
Takashi Komori
Reported 2021-09-26 23:16:26 PDT
By setting CURL_LOCK_DATA_SSL_SESSION option, libcurl uses the same Session ID when another connection connects the same server. It reduces SSL/TLS handshake time. https://curl.se/libcurl/c/curl_share_setopt.html
Attachments
Patch (1.69 KB, patch)
2021-09-26 23:27 PDT, Takashi Komori
no flags
Patch (2.28 KB, patch)
2021-09-28 13:47 PDT, Takashi Komori
no flags
Takashi Komori
Comment 1 2021-09-26 23:27:26 PDT
Fujii Hironori
Comment 2 2021-09-27 00:34:22 PDT
Comment on attachment 439320 [details] Patch LGTM
EWS
Comment 3 2021-09-27 14:28:25 PDT
Committed r283136 (242193@main): <https://commits.webkit.org/242193@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439320 [details].
Radar WebKit Bug Importer
Comment 4 2021-09-27 14:29:17 PDT
Fujii Hironori
Comment 5 2021-09-28 06:15:50 PDT
WinCairo-64-bit-WKL-Debug-Tests is crashing. Reopened. https://build.webkit.org/#/builders/32/builds/1031 SHOULD NEVER BE REACHED ..\..\Source\WebCore\platform\network\curl\CurlContext.cpp(211) : WebCore::CurlShareHandle::mutexFor Regressions: Unexpected crashes (34) http/tests/IndexedDB/collect-IDB-objects.https.html [ Crash ] http/tests/IndexedDB/storage-limit-1.https.html [ Crash ] http/tests/IndexedDB/storage-limit-2.https.html [ Crash ] http/tests/IndexedDB/storage-limit.https.html [ Crash ] http/tests/eventloop/documents-with-different-protocols-do-not-share-event-loop.html [ Crash ] http/tests/misc/dns-prefetch-control.html [ Crash ] http/tests/misc/webtiming-ssl.py [ Crash ] [...]
Fujii Hironori
Comment 6 2021-09-28 06:21:31 PDT
Fujii Hironori
Comment 7 2021-09-28 06:22:20 PDT
Reverted. Reopened.
Takashi Komori
Comment 8 2021-09-28 13:47:05 PDT
Takashi Komori
Comment 9 2021-09-28 15:43:00 PDT
(In reply to Fujii Hironori from comment #5) > WinCairo-64-bit-WKL-Debug-Tests is crashing. Reopened. > > https://build.webkit.org/#/builders/32/builds/1031 > > SHOULD NEVER BE REACHED > ..\..\Source\WebCore\platform\network\curl\CurlContext.cpp(211) : > WebCore::CurlShareHandle::mutexFor > > Regressions: Unexpected crashes (34) > http/tests/IndexedDB/collect-IDB-objects.https.html [ Crash ] > http/tests/IndexedDB/storage-limit-1.https.html [ Crash ] > http/tests/IndexedDB/storage-limit-2.https.html [ Crash ] > http/tests/IndexedDB/storage-limit.https.html [ Crash ] > > http/tests/eventloop/documents-with-different-protocols-do-not-share-event- > loop.html [ Crash ] > http/tests/misc/dns-prefetch-control.html [ Crash ] > http/tests/misc/webtiming-ssl.py [ Crash ] > [...] The cause of the crash was that we didn't have code for exclusive control for shared SSL session. We fixed it.
Takashi Komori
Comment 10 2021-09-28 20:16:53 PDT
Comment on attachment 439514 [details] Patch Clearing flags on attachment: 439514 Committed r283208 (242250@main): <https://commits.webkit.org/242250@main>
Takashi Komori
Comment 11 2021-09-28 20:16:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.