[Curl] Set CURL_LOCK_DATA_SSL_SESSION option to reduce SSL/TLS handshake time https://bugs.webkit.org/show_bug.cgi?id=230818

Reviewed by Fujii Hironori.

Set CURL_LOCK_DATA_SSL_SESSION option to reuse Session ID.
It reduces SSL/TLS handshake time.

Covered by existing tests.

* platform/network/curl/CurlContext.cpp:
(WebCore::CurlShareHandle::CurlShareHandle):
(WebCore::CurlShareHandle::mutexFor):


Canonical link: https://commits.webkit.org/242250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283208 268f45cc-cd09-0410-ab3c-d52691b4dbfc